default-n/w-policies.yaml
#default deny n/w policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: default
spec:
  podSelector: {} #apply to all pods
  policyTypes:
  - Ingress
  - Egress 
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels:
          name: default-ns
  egress:
  - to:
    - namespaceSelector: 
        matchLabels:
          name: default-ns
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53

  
---
#allow n/w policy
#in separate file
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http-traffic
  namespace: default
spec: 
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 80
      protocol: TCP
